[project]
name = "headwaters"
version = "0.1.0"
description = "Fetch watershed boundary, DEM, and NHD flowlines for a HUC ID from USGS services"
authors = [
    {name = "Arthur Koehl", email = "avkoehl@ucdavis.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas>=2.3.3,<3.0.0",
    "geopandas>=1.1.1,<2.0.0",
    "shapely>=2.1.2,<3.0.0",
    "rioxarray>=0.19.0,<0.20.0",
    "rasterio",
    "platformdirs>=4.9.4,<5.0.0",
    "pygeohydro>=0.19.4,<0.20.0",
    "pynhd>=0.19.4,<0.20.0",
    "py3dep>=0.19.0,<0.20.0",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["headwaters"]
